@@ -12,9 +12,8 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.annotation.*;
-
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/rewards")
@@ -64,7 +63,7 @@ public class RewardController {
         List<ScratchCard> cards = rewardService.getUserScratchCards(user);
         List<ScratchCardDTO> dtos = cards.stream()
                 .map(ScratchCardDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
